Localization & model fix

--- a/src/main/resources/assets/mooncakecraft/lang/en_us.lang
+++ b/src/main/resources/assets/mooncakecraft/lang/en_us.lang
@@ -5,3 +5,7 @@ item.mooncakecraft.mooncake.lotus_seed_paste_with_double_yolk.name=Mooncake (Lot
 item.mooncakecraft.mooncake.jujube_paste.name=Mooncake (Jujube Paste)
 item.mooncakecraft.mooncake.five_nuts.name=Mooncake (Five Nuts)
 item.mooncakecraft.mooncake.invalid.name=Oh no this mooncake is bad
+
+item.mooncakecraft.wheat_flour.name=Wheat Flour
+
+item.mooncakecraft.mooncakemold.name=Mooncake Mold
