--- a/src/main/resources/assets/mooncakecraft/lang/zh_cn.lang
+++ b/src/main/resources/assets/mooncakecraft/lang/zh_cn.lang
@@ -7,3 +7,5 @@ item.mooncakecraft.mooncake.five_nuts.name=五仁月饼
 item.mooncakecraft.mooncake.invalid.name=坏掉的月饼...
 
 item.mooncakecraft.wheat_flour.name=面粉
+
+item.mooncakecraft.mooncakemold.name=月饼模子
