--- a/src/main/resources/assets/mooncakecraft/lang/en_us.lang
+++ b/src/main/resources/assets/mooncakecraft/lang/en_us.lang
@@ -9,3 +9,19 @@ item.mooncakecraft.mooncake.invalid.name=Oh no this mooncake is bad
 item.mooncakecraft.wheat_flour.name=Wheat Flour
 
 item.mooncakecraft.mooncakemold.name=Mooncake Mold
+
+item.mooncakecraft.mooncakeraw.lotus_seed_paste_with_yolk.name=Raw Mooncake (Lotus Seed Paste w/ Yolk)
+item.mooncakecraft.mooncakeraw.lotus_seed_paste.name=Raw Mooncake (Lotus Seed Paste)
+item.mooncakecraft.mooncakeraw.sweet_bean_paste.name=Raw Mooncake (Sweet Bean Paste)
+item.mooncakecraft.mooncakeraw.lotus_seed_paste_with_double_yolk.name=Raw Mooncake (Lotus Seed Paste w/ Double Yolk)
+item.mooncakecraft.mooncakeraw.jujube_paste.name=Raw Mooncake (Jujube Paste)
+item.mooncakecraft.mooncakeraw.five_nuts.name=Raw Mooncake (Five Nuts)
+item.mooncakecraft.mooncakeraw.invalid.name=Oh no this raw mooncake is bad
+
+item.mooncakecraft.mooncakeunshaped.lotus_seed_paste_with_yolk.name=Unshaped Mooncake (Lotus Seed Paste w/ Yolk)
+item.mooncakecraft.mooncakeunshaped.lotus_seed_paste.name=Unshaped Mooncake (Lotus Seed Paste)
+item.mooncakecraft.mooncakeunshaped.sweet_bean_paste.name=Unshaped Mooncake (Sweet Bean Paste)
+item.mooncakecraft.mooncakeunshaped.lotus_seed_paste_with_double_yolk.name=Unshaped Mooncake (Lotus Seed Paste w/ Double Yolk)
+item.mooncakecraft.mooncakeunshaped.jujube_paste.name=Unshaped Mooncake (Jujube Paste)
+item.mooncakecraft.mooncakeunshaped.five_nuts.name=Unshaped Mooncake (Five Nuts)
+item.mooncakecraft.mooncakeunshaped.invalid.name=Oh no this unshaped mooncake is bad
