--- a/src/main/resources/assets/mooncakecraft/lang/en_us.lang
+++ b/src/main/resources/assets/mooncakecraft/lang/en_us.lang
@@ -6,6 +6,8 @@ item.mooncakecraft.mooncake.jujube_paste.name=Mooncake (Jujube Paste)
 item.mooncakecraft.mooncake.five_nuts.name=Mooncake (Five Nuts)
 item.mooncakecraft.mooncake.invalid.name=Oh no this mooncake is bad
 
+item.mooncakecraft.peanut_seed.name=Peanut
+item.mooncakecraft.sesame_seed.name=Sesame
 item.mooncakecraft.wheat_flour.name=Wheat Flour
 
 item.mooncakecraft.mooncakemold.name=Mooncake Mold
