Jujube and its plant

--- a/src/main/resources/assets/mooncakecraft/lang/zh_cn.lang
+++ b/src/main/resources/assets/mooncakecraft/lang/zh_cn.lang
@@ -6,6 +6,7 @@ item.mooncakecraft.mooncake.jujube_paste.name=枣泥月饼
 item.mooncakecraft.mooncake.five_nuts.name=五仁月饼
 item.mooncakecraft.mooncake.invalid.name=坏掉的月饼...
 
+item.mooncakecraft.jujube.name=红枣
 item.mooncakecraft.peanut_seed.name=花生
 item.mooncakecraft.sesame_seed.name=芝麻
 item.mooncakecraft.wheat_flour.name=面粉
