--- a/src/main/resources/assets/mooncakecraft/lang/en_us.lang
+++ b/src/main/resources/assets/mooncakecraft/lang/en_us.lang
@@ -7,9 +7,9 @@ item.mooncakecraft.mooncake.five_nuts.name=Mooncake (Five Nuts)
 item.mooncakecraft.mooncake.invalid.name=Oh no this mooncake is bad
 
 item.mooncakecraft.jujube.name=Jujube
-item.mooncakecraft.lotus_seed.name=Lotus Seed
-item.mooncakecraft.peanut_seed.name=Peanut
-item.mooncakecraft.sesame_seed.name=Sesame
+item.mooncakecraft.lotus_seeds.name=Lotus Seed
+item.mooncakecraft.peanut_seeds.name=Peanut
+item.mooncakecraft.sesame_seeds.name=Sesame
 item.mooncakecraft.wheat_flour.name=Wheat Flour
 
 item.mooncakecraft.mooncakemold.name=Mooncake Mold
