--- a/src/main/resources/assets/mooncakecraft/lang/zh_cn.lang
+++ b/src/main/resources/assets/mooncakecraft/lang/zh_cn.lang
@@ -7,9 +7,9 @@ item.mooncakecraft.mooncake.five_nuts.name=五仁月饼
 item.mooncakecraft.mooncake.invalid.name=坏掉的月饼...
 
 item.mooncakecraft.jujube.name=红枣
-item.mooncakecraft.lotus_seed.name=莲子
-item.mooncakecraft.peanut_seed.name=花生
-item.mooncakecraft.sesame_seed.name=芝麻
+item.mooncakecraft.lotus_seeds.name=莲子
+item.mooncakecraft.peanut_seeds.name=花生
+item.mooncakecraft.sesame_seeds.name=芝麻
 item.mooncakecraft.wheat_flour.name=面粉
 
 item.mooncakecraft.mooncakemold.name=月饼模子
