--- a/src/main/resources/assets/mooncakecraft/lang/zh_cn.lang
+++ b/src/main/resources/assets/mooncakecraft/lang/zh_cn.lang
@@ -38,4 +38,4 @@ item.mooncakecraft.filling.jujube_paste.name=枣泥馅
 item.mooncakecraft.filling.five_nuts.name=五仁馅
 item.mooncakecraft.filling.invalid.name=坏掉的月饼馅...
 
-itemGroup.mooncakecraft=月饼工艺
+itemGroup.mooncakecraft=月饼工坊
